# dquant

./: .gitignore  LICENSE  README.md  README.ru.md  docs.md  docs.ru.md  garch.py  grad_boost.py  main.py  mkdocs.yml  pyplreadme.md  pyproject.toml  test.py  test_load.py  visual.py
docs/: changelog.md  contributing.md  core_concepts.md  faq.md  index.md  installation.md  introduction.md  license.md  quick_start.md  requirements.txt
docs/advanced/: custom_features.md  hyperparameters.md
docs/examples/: bitcoin.md
docs/user_guide/: api.md  data_sources.md  interpreting.md
examples/MetaTrader5/: EURUSD.ipynb  GOLD.ipynb  basic.ipynb
examples/yfinance/: EURUSD.ipynb  GOLD.ipynb  basic.ipynb
src/dquant/: __init__.py  get_data.py  metrics.py  models.py  visual.py
